--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -1,15 +1,13 @@
 [project]
-name = "estudando"
+name = "backend"
 version = "0.1.0"
 description = "Add your description here"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.13"
 dependencies = [
+    "bcrypt>=4.3.0",
     "fastapi[all]>=0.116.1",
-    "langchain>=0.3.27",
-    "langchain-openai>=0.3.32",
-    "psycopg2-binary>=2.9.10",
-    "python-dotenv>=1.1.1",
+    "passlib>=1.7.4",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
