--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "bcrypt>=4.3.0",
     "fastapi[all]>=0.116.1",
     "passlib>=1.7.4",
+    "pytest>=8.4.2",
     "sqlalchemy>=2.0.43",
     "uvicorn>=0.35.0",
 ]
